--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.35",
+		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@fortawesome/react-native-fontawesome": "^0.2.6",
+		"@react-native-async-storage/async-storage": "^1.14.1",
+		"@react-native-community/masked-view": "^0.1.10",
+		"@react-native-community/slider": "^3.0.3",
+		"@react-navigation/drawer": "^5.12.4",
+		"@react-navigation/native": "^5.9.3",
+		"lodash": "^4.17.21",
 		"react": "17.0.1",
 		"react-native": "0.64.0",
-		"react-native-game-engine": "^1.2.0"
+		"react-native-game-engine": "^1.2.0",
+		"react-native-gesture-handler": "^1.10.3",
+		"react-native-reanimated": "^1.13.2",
+		"react-native-safe-area-context": "^3.2.0",
+		"react-native-screens": "^2.18.1",
+		"react-native-svg": "^12.1.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
